--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ms.app">
 
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -13,9 +12,10 @@
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
 
+    <!-- 8.0 读取应用使用,使用记录访问权限 -->
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
-        tools:ignore="ProtectedPermissions" /> <!-- 8.0 读取应用使用,使用记录访问权限 -->
+        tools:ignore="ProtectedPermissions" />
 
 
     <application
@@ -35,19 +35,30 @@
         <activity
             android:name=".SplashActivity"
             android:launchMode="singleTask">
+
+
+        </activity>
+
+        <activity android:name=".WeChatClearScanActivity"></activity>
+
+        <activity android:name=".WeChatClearActivity"></activity>
+
+
+        <activity
+            android:name=".ui.activity.wechat.ing.WeChatClearScanIngActivity"
+            android:launchMode="singleTask"></activity>
+
+        <activity
+            android:name=".ui.activity.wechat.clear.WeChatClearActivity"
+            android:launchMode="singleTask"></activity>
+
+
+        <activity android:name=".ExActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <activity android:name=".WeChatClearScanActivity">
-
-
-
-        </activity>
-
-        <activity android:name=".WeChatClearActivity">
 
         </activity>
 
